# wordclock-pi3

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deploy.sh  wordclock.service
.cargo/: config.toml
src/: main.rs
